gui/less/offcanvas.less: Reduced z-index to avoid covering the fullscreen ...
... editor mode

--- a/www/automad/gui/less/offcanvas.less
+++ b/www/automad/gui/less/offcanvas.less
@@ -33,7 +33,7 @@
  */
 
 
-@offcanvas-z-index:                             1000;
+@offcanvas-z-index:                             900;
 @offcanvas-background:                          fade(@base-body-background, 30%);
 
 @offcanvas-bar-width:                           300px;
